# utf-12

./: README.md  __init__.py  pyproject.toml  utf12.py
